<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Math - Angles</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="todec_text">Convert/Clear</string>
    <string name="decimal_hint">decimal</string>
    <string name="rad_hint">rad</string>
    <string name="toast_message">Insert something first!</string>
    <string name="menu_exit">Exit</string>
    <string name="alert_title">Alert</string>
    <string name="alert_text">Invalid sexagesimal format! Continuing anyway</string>
    <string name="pref_digits">Digits after the decimal mark</string>
    <string name="pref_digits_summary">Number of digits after the decimal mark</string>
    <string name="pref_accuracy">Accuracy</string>
    <string name="pref_app">Angles</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="info_text">This application has been created by Ingamedeo. \n\nAngles allows you to calculate angles in sexagesimal, decimal and radians. \n\nThis in an opensource application. \n\nBuy me a coffee! \nPayPal - ingamedeo@gmail.com</string>
    <string name="ratetext">Rate Me!</string>

</resources>
