<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_accuracy" >
        <ListPreference
        android:key="prefDigits"
        android:entries="@array/syncFrequencyValues"
        android:summary="@string/pref_digits_summary"
        android:entryValues="@array/syncFrequencyValues"
        android:title="@string/pref_digits"
        android:defaultValue="6"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Update Settings" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefSendReport"
            android:summary="Helps to fix bugs"
            android:title="Send crash reports" >
        </CheckBoxPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="Angles" >
        <Preference
            android:key="about"
            android:title="About"
            android:summary="About Math-Angles. By ingamedeo">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.ingamedeo.mathangles"
                android:targetClass="com.ingamedeo.mathangles.AboutActivity"/>
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>