<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/decimal"
        android:layout_below="@+id/linearlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/decimal_hint"
        android:inputType="numberDecimal"/>

    <EditText
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:id="@+id/rad"
        android:layout_below="@+id/decimal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/rad_hint"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearlayout"
        android:layout_marginTop="20dp">

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/gradi"
            android:hint="°"/>
        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/primi"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@id/gradi"
            android:hint="'"/>
        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/secondi"
            android:layout_centerHorizontal="true"
            android:layout_toRightOf="@id/primi"
            android:hint="''"/>
        </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todec_text"
        android:layout_below="@id/rad"
        android:id="@+id/todec"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

</RelativeLayout>
